--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Carlos A. Plata"
-  avatar           : "cplata1.jpg"
+  avatar           : "caplata.png"
   bio              : "Post-Doc in Physics at the University of Padova"
   location         : "Padova"
   employer         :
