--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Carlos A. Plata"
 title_separator          : "-"
 name                     : &name "Carlos A. Plata"
-description              : &description "Post-Doc in Physics at the University of Padova"
+description              : &description "Tenured Associate Professor in Theoretical Physics at the University of Sevilla"
 url                      : https://caplata.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "caplata.github.io"
