--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Carlos A. Plata"
   avatar           : "profile.png"
-  bio              : "Post-Doc in Physics at the University of Padova"
-  location         : "Padova"
+  bio              : "Tenured Associate Professor in Theoretical Physics at the University of Sevilla"
+  location         : "Sevilla"
   employer         :
   googlescholar    : "https://scholar.google.gr/citations?user=FFe5uvQAAAAJ&hl=de"
   email            : 
